--- a/config-example.yml
+++ b/config-example.yml
@@ -71,6 +71,7 @@ graphhopper:
   # usage) and the routing will also be slower than with `turn_costs: false`.
   profiles_ch:
     - profile: simra_bike
+    - profile: normal_bike
   #   - profile: car_with_turn_costs
 
   # Hybrid mode:
