--- a/config-example.yml
+++ b/config-example.yml
@@ -6,8 +6,8 @@ graphhopper:
   graph.location: graph-cache
 
   # Location of safety and surface quality score tables
-  weights.surface_quality: "Users/dk/uniprojects/graphhopper/way_quality_mapping.csv"
-  weights.safety_score: "/Users/dk/uniprojects/graphhopper/way_score_mapping.csv"
+  weights.surface_quality: "way_quality_mapping.csv"
+  weights.safety_score: "way_score_mapping.csv"
 
   ##### Vehicles #####
 
